"$Id$"
Top of CVS tree:

------------------------------------------------------------------------------

Add inventory animation to the gtk2 client.
gtk2proto.h: rebuilt
inventory.c: Add new function that animates inventory.  Have draw_table() take
   a second param that determines if it is doing an animation run or just
   a normal draw.
main.c: Move PACKAGE_DATA_DIR to be within WIN32 defines.  Add call to
   inventory_tick() in do_timeout()
MSW 2005-06-26

common/metaserver.c: wrong number displayed for cached servers.
Ryo 2005-06-25

configure.in, configure: Turn of the use of dmalloc as the default - if
   dmalloc is disabled, it has to be intentionally set.  gtkv2 client runs
   dog slow if dmalloc is used, so that isn't a good default
common/item.c: Fix bug that resulted in the item names not being updated
   properly - bug introduced in patch 1197437.
MSW 2005-06-04

crossfire-client.spec, gnome/Makefile.in, x11/Makefile.in: Patch from Kari
   Pahula to fix manpage paths.
gtk/gx11.h: Patch from Kari Pahula to remove incorrect variable declaration.
Andreas Kirschbaum 2005-06-01
	
Committed patch #1197437 courtesy Kevin Rudat (krudat).
This patch moves inventory-related functions in GTK client to
 one specific file. Also makes inventory refresh less often.
Affected files:
 * common: client.h item.c item.h p_cmd.c proto.h
 * gtk: config.c gtkproto.h gx11.c gx11.h inventory.c Makefile.in
 * x11: x11.c x11proto.h

common/metaserver.c: add server cache.
gtk/gx11.c: initialize server cache filename.
Ryo 2005-05-23

gtk/gx11.c: Windows has player-specific keys, get'em (was broken with new
 login window)
Ryo 2005-05-12

Add newpickup support to the gtkv2 client.  Didn't add old support (still
available by specific commands) as I think the interface gets confusing
to have them both - would be better to extend newpickup logic if necessary
to support anything old pickup does that newpickup doesn't.
--
gtk-v2/Makefile.in: Rebuilt